--- a/projects.html
+++ b/projects.html
@@ -4,103 +4,220 @@ title: Projects
 permalink: /projects/
 ---
 
+<h1 style="text-align: center">Graduate Journey</h1>
+
 <div>
-  <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px;">
+  <h2>
+    Study on Electric Capacitated Vehicle Routing Problem with Time Windows
+    using Reinforcement Learning [2020]
+  </h2>
+  <iframe
+    src="https://drive.google.com/file/d/1S66LT3kInvsubYGUlW4S78QJWLESqap3/view?usp=sharing"
+    frameborder="0"
+    height="100%"
+    width="100%"
+  >
+  </iframe>
+</div>
+
+<hr />
+
+<div>
+  <h2>
+    Survey on Load Balancing Algorithms in Distributed File Systems [2019]
+  </h2>
+  <iframe
+    src="https://drive.google.com/file/d/1uwlMDUGlllPCa1riIjcvhv8-sL7gsdoJ/view?usp=sharing"
+    frameborder="0"
+    height="100%"
+    width="100%"
+  >
+  </iframe>
+</div>
+
+<hr />
+
+<div>
+  <h2>
+    <a
+      href="https://github.com/ShehabMMohamed/ToxicCommentClassification"
+      target="_blank"
+      >Recurrent Neural Networks for Toxic Comment Classification [2018]</a
+    >
+  </h2>
+  <span
+    >A Natural Language Processing project where we developed an RNN model to
+    analyze online comments on the internet and categorize each comment based on
+    the level of toxicity. More details can be found in paper
+    <a
+      href="https://github.com/ShehabMMohamed/ToxicCommentClassification/blob/master/NLP%20Paper.pdf"
+      target="_blank"
+      >here</a
+    >
+  </span>
+</div>
+
+<hr />
+
+<h1 style="text-align: center">Undergraduate Journey</h1>
+
+<div>
+  <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px" />
   <h2>Lumen | Undergraduate Thesis Project [2016-2017]</h2>
-  <span>A two-part driver assistance application - a distraction detector to notify a driver when they aren't focusing on the road, and a navigation display to help them get where they need to go with the least distraction possible. The distraction detector is a <I>pre-trained neural network</I> deployed on a RaspberryPi 3 equipped with a Pi Camera that monitors the driver through a live video feed. The navigation is a web application that projects directions onto the windshield for the driver to follow.
-  </span>
-    <p align="center"><emp>Developed by a team of 4.</emp></p>
-    <ul>
-      <li>
-        <a href="https://youtu.be/xRzlYiH8sg4" target="_blank">Lumen - Distracted Driver Classifier [demo] </a>
-      </li>
-      <li>
-        <a href="https://youtu.be/wY3botkMZ-A" target="_blank">Lumen - Navigation [demo]</a>
-      </li>
-    </ul>
-</div>
-
-<hr>
-
-<div>
-  <h2><a href="https://github.com/ShehabMMohamed/ToxicCommentClassification" target="_blank">Recurrent Neural Networks for Toxic Comment Classification [2018]</a></h2>
-  <span>A Natural Language Processing project where we developed an RNN model to analyze online comments on the internet and categorize each comment based on the level of toxicity. More details can be found in our paper <a href="https://github.com/ShehabMMohamed/ToxicCommentClassification/blob/master/NLP%20Paper.pdf" target="_blank">here</a>
-  </span>
-  <p align="center"><emp>Developed by a team of 3.</emp></p>
-</div>
-
-<hr>
-
-<div>
-  <img src="/assets/projects/SynchroCity.png" style="width: 100px; height: 100px;">
-  <h2>Synchro City [2017]</h2>
-  <span>Embedded Systems Project: A simulation of cars manuevering in a city, detecting obstacles, following certain paths that don't conflict with each other to avoide collision. It won the in-class best embedded systems project award.
+  <span
+    >A two-part driver assistance application - a distraction detector to notify
+    a driver when they aren't focusing on the road, and a navigation display to
+    help them get where they need to go with the least distraction possible. The
+    distraction detector is a <i>pre-trained neural network</i> deployed on a
+    RaspberryPi 3 equipped with a Pi Camera that monitors the driver through a
+    live video feed. The navigation is a web application that projects
+    directions onto the windshield for the driver to follow.
   </span>
   <p align="center"><emp>Developed by a team of 4.</emp></p>
-    <ul>
-      <li>
-        <a href="https://youtu.be/ndS_9Wjfhs8" target="_blank">Synchro City [demo]</a>
-      </li>
-    </ul>
+  <ul>
+    <li>
+      <a href="https://youtu.be/xRzlYiH8sg4" target="_blank"
+        >Lumen - Distracted Driver Classifier [demo]
+      </a>
+    </li>
+    <li>
+      <a href="https://youtu.be/wY3botkMZ-A" target="_blank"
+        >Lumen - Navigation [demo]</a
+      >
+    </li>
+  </ul>
 </div>
 
-<hr>
+<hr />
 
 <div>
-  <h2><a href="https://github.com/ShehabMMohamed/TinyImageNet-KaggleCompetition" target="_blank">In-Class Kaggle Competition: TinyImageNet [2017]</a></h2>
-  <span>Designed a Classifier on top of a pretrained Convolution Neural Network model, trained it and tested its accuracy which gave the 2nd highest rank in class with a validation accuracy of 83.3%.
+  <img
+    src="/assets/projects/SynchroCity.png"
+    style="width: 100px; height: 100px"
+  />
+  <h2>Synchro City [2017]</h2>
+  <span
+    >Embedded Systems Project: A simulation of cars manuevering in a city,
+    detecting obstacles, following certain paths that don't conflict with each
+    other to avoide collision. It won the in-class best embedded systems project
+    award.
+  </span>
+  <p align="center"><emp>Developed by a team of 4.</emp></p>
+  <ul>
+    <li>
+      <a href="https://youtu.be/ndS_9Wjfhs8" target="_blank"
+        >Synchro City [demo]</a
+      >
+    </li>
+  </ul>
+</div>
+
+<hr />
+
+<div>
+  <h2>
+    <a
+      href="https://github.com/ShehabMMohamed/TinyImageNet-KaggleCompetition"
+      target="_blank"
+      >In-Class Kaggle Competition: TinyImageNet [2017]</a
+    >
+  </h2>
+  <span
+    >Designed a Classifier on top of a pretrained Convolution Neural Network
+    model, trained it and tested its accuracy which gave the 2nd highest rank in
+    class with a validation accuracy of 83.3%.
   </span>
 </div>
 
-<hr>
+<hr />
 
 <div>
   <h2>Kaggle Competition: Intel and MovileODT Cancer Screening [2017]</h2>
-  <span>Participated in Kaggle competition with a colleague on developing a machine learning algorithm that learns to accurately identify a cancerous infection type based on images to help identifying early stages of infection. Team [Amr &amp; Shehab]'s last contribution ranked 24th out of 703.
+  <span
+    >Participated in Kaggle competition with a colleague on developing a machine
+    learning algorithm that learns to accurately identify a cancerous infection
+    type based on images to help identifying early stages of infection. Team
+    [Amr &amp; Shehab]'s last contribution ranked 24th out of 703.
   </span>
   <p align="center"><emp>Developed by a team of 2.</emp></p>
 </div>
 
-<hr>
+<hr />
 
 <div>
-  <h2><a href="https://github.com/ShehabMMohamed/Arm-Tracker" target="_blank">Arm Tracker [2016]</a></h2>
-  <span>A Computer Vision project where me and a colleague developed an application that tries to find hands/arms using our custom color-space for the skin tone, mask out the background, draw convex envelope around the object, and then tracks its path from the center of that object.
+  <h2>
+    <a href="https://github.com/ShehabMMohamed/Arm-Tracker" target="_blank"
+      >Arm Tracker [2016]</a
+    >
+  </h2>
+  <span
+    >A Computer Vision project where me and a colleague developed an application
+    that tries to find hands/arms using our custom color-space for the skin
+    tone, mask out the background, draw convex envelope around the object, and
+    then tracks its path from the center of that object.
   </span>
   <p align="center"><emp>Developed by a team of 2.</emp></p>
-  <video style="display: block; margin: 0 auto;" controls>
-    <source src="/assets/projects/ArmTracker.mp4" type="video/mp4">
+  <video style="display: block; margin: 0 auto" controls>
+    <source src="/assets/projects/ArmTracker.mp4" type="video/mp4" />
   </video>
 </div>
 
-<hr>
+<hr />
 
 <div>
-  <h2><a href="https://github.com/ShehabMMohamed/Distributed-Systems" target="_blank">Distributed Image Viewer [2016]</a></h2>
-  <span>A peer-to-peer distributed systems that allows users of different machines in the same network to send encrypted images to each other with a view counter and access privileges. Its core functionality is the following:
+  <h2>
+    <a
+      href="https://github.com/ShehabMMohamed/Distributed-Systems"
+      target="_blank"
+      >Distributed Image Viewer [2016]</a
+    >
+  </h2>
+  <span
+    >A peer-to-peer distributed systems that allows users of different machines
+    in the same network to send encrypted images to each other with a view
+    counter and access privileges. Its core functionality is the following:
     <ol>
       <li>Add/Delete/Download/Display embedded Images.</li>
-      <li>Grant/Revoke Access to users in the database to view certain images with a set number of views allowed.</li>
+      <li>
+        Grant/Revoke Access to users in the database to view certain images with
+        a set number of views allowed.
+      </li>
       <li>View Downloaded/Allowed-Access Images' list.</li>
     </ol>
   </span>
   <p align="center"><emp>Developed by a team of 4.</emp></p>
 </div>
 
-<hr>
+<hr />
 
 <div>
-  <h2><a href="https://github.com/ShehabMMohamed/WordToWeb" target="_blank">Word2Web [2016]</a></h2>
-  <span>A Perl application that takes a word document (.docx) and parses the main elements to generate the corresponding .HTML and .CSS files!
+  <h2>
+    <a href="https://github.com/ShehabMMohamed/WordToWeb" target="_blank"
+      >Word2Web [2016]</a
+    >
+  </h2>
+  <span
+    >A Perl application that takes a word document (.docx) and parses the main
+    elements to generate the corresponding .HTML and .CSS files!
   </span>
   <p align="center"><emp>Developed by a team of 3.</emp></p>
 </div>
 
-<hr>
+<hr />
 
 <div>
-  <h2><a href="https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330" target="_blank">MIPS Pipelined CPU Simulator [2015]</a></h2>
-  <span>Computer Architecture Project: A Desktop GUI application of a MIPS pipelined CPU with BTB simulator that reads MIPS code and shows the cycle of each instruction (Fetch -> Decode -> Execute -> Data Memory -> Write Back) and the content of registers after each cycle.
+  <h2>
+    <a
+      href="https://github.com/ShadyF/Advanced_Pipelined_MIPS_Simulator-CS330"
+      target="_blank"
+      >MIPS Pipelined CPU Simulator [2015]</a
+    >
+  </h2>
+  <span
+    >Computer Architecture Project: A Desktop GUI application of a MIPS
+    pipelined CPU with BTB simulator that reads MIPS code and shows the cycle of
+    each instruction (Fetch -> Decode -> Execute -> Data Memory -> Write Back)
+    and the content of registers after each cycle.
   </span>
   <p align="center"><emp>Developed by a team of 4.</emp></p>
 </div>
