--- a/projects.html
+++ b/projects.html
@@ -4,35 +4,24 @@ title: Projects
 permalink: /projects/
 ---
 
-<h1 style="text-align: center">Graduate Journey</h1>
-
 <div>
   <h2>
-    Study on Electric Capacitated Vehicle Routing Problem with Time Windows
-    using Reinforcement Learning [2020]
+    Study on E-CVRPTW Problem using Reinforcement Learning [2020]
+    <a
+      href="https://drive.google.com/file/d/1S66LT3kInvsubYGUlW4S78QJWLESqap3/view?usp=sharing"
+    ></a>
   </h2>
-  <iframe
-    src="https://drive.google.com/file/d/1S66LT3kInvsubYGUlW4S78QJWLESqap3/view?usp=sharing"
-    frameborder="0"
-    height="100%"
-    width="100%"
-  >
-  </iframe>
 </div>
 
 <hr />
 
 <div>
   <h2>
-    Survey on Load Balancing Algorithms in Distributed File Systems [2019]
+    Load Balancing Algorithms in Distributed File Systems [2019]
+    <a
+      href="https://drive.google.com/file/d/1uwlMDUGlllPCa1riIjcvhv8-sL7gsdoJ/view?usp=sharing"
+    ></a>
   </h2>
-  <iframe
-    src="https://drive.google.com/file/d/1uwlMDUGlllPCa1riIjcvhv8-sL7gsdoJ/view?usp=sharing"
-    frameborder="0"
-    height="100%"
-    width="100%"
-  >
-  </iframe>
 </div>
 
 <hr />
@@ -58,8 +47,6 @@ permalink: /projects/
 </div>
 
 <hr />
-
-<h1 style="text-align: center">Undergraduate Journey</h1>
 
 <div>
   <img src="/assets/projects/lumen.png" style="width: 100px; height: 100px" />
