--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,11 @@ permalink: /projects/
 
 <div>
   <h2>
-    Study on E-CVRPTW Problem using Reinforcement Learning [2020]
     <a
       href="https://drive.google.com/file/d/1S66LT3kInvsubYGUlW4S78QJWLESqap3/view?usp=sharing"
-    ></a>
+      target="_blank"
+      >Study on E-CVRPTW Problem using Reinforcement Learning [2020]</a
+    >
   </h2>
 </div>
 
@@ -17,10 +18,11 @@ permalink: /projects/
 
 <div>
   <h2>
-    Load Balancing Algorithms in Distributed File Systems [2019]
     <a
       href="https://drive.google.com/file/d/1uwlMDUGlllPCa1riIjcvhv8-sL7gsdoJ/view?usp=sharing"
-    ></a>
+      target="_blank"
+      >Load Balancing Algorithms in Distributed File Systems [2019]
+    </a>
   </h2>
 </div>
 
