Fix url with new username

--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@ permalink: /projects/
 <div>
   <h2>
     <a
-      href="https://github.com/ShehabMMohamed/TinyImageNet-KaggleCompetition"
+      href="https://github.com/shehab-as/TinyImageNet-KaggleCompetition"
       target="_blank"
       >In-Class Kaggle Competition: TinyImageNet [2017]</a
     >
@@ -89,7 +89,7 @@ permalink: /projects/
 
 <div>
   <h2>
-    <a href="https://github.com/ShehabMMohamed/Arm-Tracker" target="_blank"
+    <a href="https://github.com/shehab-as/Arm-Tracker" target="_blank"
       >Arm Tracker [2016]</a
     >
   </h2>
@@ -110,7 +110,7 @@ permalink: /projects/
 <div>
   <h2>
     <a
-      href="https://github.com/ShehabMMohamed/Distributed-Systems"
+      href="https://github.com/shehab-as/Distributed-Systems"
       target="_blank"
       >Distributed Image Viewer [2016]</a
     >
@@ -135,7 +135,7 @@ permalink: /projects/
 
 <div>
   <h2>
-    <a href="https://github.com/ShehabMMohamed/WordToWeb" target="_blank"
+    <a href="https://github.com/shehab-as/WordToWeb" target="_blank"
       >Word2Web [2016]</a
     >
   </h2>
